# SeamCarving

./: README.md  minElement.vsps
lib/RelWithDebInfo/: core.exp  core.lib
src/: CMakeLists.txt  CMakeSettings.json
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  ImageContainer.h  PNGViewer.cpp  PNGViewer.h  PerfUtility.cpp  PerfUtility.h  SeamCarver.cpp  SeamCarver.h  SeamCostCalculator.cpp  SeamCostCalculator.h  SobelMagnitude.cpp  SobelMagnitude.h
